@@ -4,10 +4,10 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: BaseVersion.hs,v 1.37 2002/03/12 12:39:13 chak Exp $"
+idstr      = "$Id: BaseVersion.hs,v 1.38 2002/05/14 05:48:13 chak Exp $"
 name       = "Compiler Toolkit"
-versnum    = "0.24.0"
-date	   = "12 Mar 2002"
+versnum    = "0.24.1"
+date	   = "22 Mar 2002"
 version    = name ++ ", version " ++ versnum ++ ", " ++ date
 copyright  = "Copyright (c) [1995..2002] Manuel M T Chakravarty"
 disclaimer = "This software is distributed under the \
